fixed overflow on mobile

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
+html, body {
     overflow-x: hidden;
 }
 
@@ -108,6 +108,7 @@ section {
     width: 100%;
     min-height: 100vh;
     padding: 2rem 0rem 5rem 0;
+    overflow-x: hidden;
 }
 
 .hidden {
